Fix trakt icon position on Firefox

--- a/src/app/plugins/TraktScrobblerPlugin.scss
+++ b/src/app/plugins/TraktScrobblerPlugin.scss
@@ -6,9 +6,9 @@
 
 .chrome-trakt-button {
   .trakt-icon {
-    height: 45%;
-    width: 45%;
-    margin: auto;
+    height: 44%;
+    width: 44%;
+    padding: 28%;
   }
 
   &.state-idle, &.state-loading {
